app/assets/stylesheets/pages.scss
@import "bootstrap/mixins"; 
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700); 

body, h1, h3, p {
  font-family: 'Open Sans', sans-serif; 
}

.action {
  margin: 15px 0 10px; 
}

.caption {
	p {
		line-height: 15px;
	}
}

.container, .navbar-fixed-top .container {
	width: 1000px;
}

h1 {
  font-weight: 700; 
}

i {
  font-size: 15px; 
}

.left {
  float: left; 
}

.navbar-inner {
  padding: 5px; 
}

#overview {
  font-size: 15px; 
  margin: 0 0 30px; 
	padding-bottom: 30px;
  padding-top: 90px;
}

p {
  font-weight: 400; 
}

.right {
  float: right; 
}

#skills {
	height: 125px;
}

.thumbnail {
  @include border-radius(10px); 
	float: left;
	margin: 0 13px 0;
  padding: 2px; 
  width: 300px; 
  .caption {
    display: inline-block; 
    margin: 5px 20px; 
  }
  img {
    @include border-radius(10px 10px 0px 0px); 
  }
}

